--- a/templates/affiliate.html
+++ b/templates/affiliate.html
@@ -199,7 +199,7 @@
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script>
-        const apiUrl = 'http://192.168.1.17:5000';
+        const apiUrl = 'https://clubmadeira.io';
 
         // Configure Toastr options
         toastr.options = {
