--- a/templates/listings.html
+++ b/templates/listings.html
@@ -67,7 +67,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script>
-        const apiUrl = 'http://192.168.1.17:5000';
+        const apiUrl = 'https://clubmadeira.io/';
         const userId = 'user1'; // Hardcoded User ID
 
         // Configure Toastr options
